revert ref packages to Java 8